# alphazero

./: .gitignore  CLAUDE.md  README_filter.md  README_pipeline.md  README_teachability_spec.md  ai-prototype.ipynb  amplification_pipeline.py  az.yaml  az_novelty.yaml  base.yaml  concept_vector.npy  debug_activations.py  debug_amplification.py  experiment.ipynb  generate_quiz_data.py  load_kaggle_positions.py  novel_concepts.txt  novelty_filter.ipynb  novelty_prototype.ipynb  pipeline.py  prototype.ipynb  prototype_meta.json  prototype_meta_sample.json  pyproject.toml  quiz_app.py  quiz_data.json  requirements.txt  rollout_pipeline.py  run_amplification.sh  scratch.ipynb  spine.yaml  spine_pipeline.py  static_pipeline.py  teachability_pipeline.py  test_amplification_setup.py  test_kaggle_loader.py  viz_board.py
alphazero/: __init__.py  run.sh
configs/: amplify.yaml  amplify_pos2812.yaml  amplify_pos2812_final.yaml  az_novelty.yaml  base.yaml  novelty.yaml  quiz.yaml  spine.yaml  teachability.yaml
docs/: README_paper.md  README_pipeline.md  README_teachability_pipeline.md  pipeline_guide.md  plan.md
models/alphazero-othello-8/: config.json  eval.json
notebooks/: interesting_games.ipynb  novelty_filter.ipynb
scripts/: analyze_amplification_runs.py  clean.sh  plot_amplification_results.py
src/: registries.py  registry.py
src/evaluator/: evals.py  (+1 more)
tests/: test_amplification_eval.py  test_amplify.py  test_spine_rollout_contrasts.py  test_teachability_core.py  test_teachability_dataset_loader.py  test_teachability_pipeline_smoke.py  test_teachability_regression.py
(+475 files in other folders)
