[project]
name = "alphazero"
version = "0.1.0"
description = "CS3A AlphaZero RL project"
keywords = ["ai", "game", "reinforcement learning", "othello", "mcts", "neural networks", "alphazero", "policy iteration"]
license = {text = "MIT License"}
requires-python = ">=3.10"

authors = [
    {name = "Tom Labiausse", email = "tom.labiausse@student-cs.fr"},
    {name = "Amine Cherif Haouat", email = "amine.cherifhaouat@student-cs.fr"},
    {name = "Sami Jallouli", email = "sami.jallouli@student-cs.fr"},
]

urls = {hub = "https://huggingface.co/t0m1ab"}

# automatically install the following packages when installing the project (no need to pip install -r requirements.txt)
dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "aenum",
    "torch",
    "huggingface-hub",
    "ipykernel>=7.1.0",
    "cvxpy>=1.7.5",
    "scikit-learn>=1.7.2",
    "ecos>=2.0.14",
    "kagglehub>=0.4.1",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "streamlit>=1.54.0",
]

# optional dependencies are not installed by default but can be if specified like so: pip install .[dev]
[project.optional-dependencies]
dev = [
    "toml",
    "ipykernel",
]

[project.scripts]
alphazero = "alphazero.__main__:main"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
